# simpleMonopoly

./: CMakeLists.txt  Makefile  README.md  main.c  monopolyGame.c  monopolyGame.h  structs.h
